{
    "name": "InputSystem_Actions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "df70fa95-8a34-4494-b137-73ab6b9c7d37",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "11fcf22c-656a-40dd-83b4-9bf16569be17",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "78049ead-24bd-4130-8ca5-566237b7cd55",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrafeRight",
                    "type": "Button",
                    "id": "690bc447-4376-447a-a8be-2726d6d3c6f1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrafeLeft",
                    "type": "Button",
                    "id": "c5d9e09f-dc35-4e9a-b177-c2add20e9f30",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "7bd98deb-ad01-466f-bcc7-87d7f2758bed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "b0aa9b66-b3ed-4c10-b1de-24e0b51946ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "b3a0076c-dae5-4028-b113-3464a047e522",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookMode",
                    "type": "Button",
                    "id": "7fdb10f8-a09d-4994-ac60-4dce1135faaa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "6b444451-8a00-4d00-a97e-f47457f736a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "de9840c4-32d5-4975-91cb-d15d1bf5f725",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "0e3e69a5-9eb8-4031-844e-14e2b4a9cca3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "238d5435-0a97-435a-a783-015b461b3a64",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c8e490b-c610-4785-884f-f04217b23ca4",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=0.05,y=0.05)",
                    "groups": ";Keyboard&Mouse;Touch",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "781d3b3f-00f1-41f5-a5ee-315b42a7d53d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),StickDeadzone,ScaleVector2(x=300,y=300)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cfb60a6-f0d6-4f4b-bf12-18cc1a84a108",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87675655-d43a-49e2-9c48-f2667cf0a4ed",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a479c2e-a615-45c4-8c4a-931a0fec6b3e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0306ff9-bd85-4de4-91ae-49b97f493839",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "323cae39-e855-4879-b8f0-4f0a249b6f7d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "StrafeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adc94988-7d5e-468c-a93a-04b130128230",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "StrafeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7919d425-7d09-46ef-84e3-69a36d456233",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85391f1b-f1fb-481b-a571-184db9fe1e66",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18680069-0e1b-4c64-98c6-f9f3447bc0df",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "LookMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a313e8aa-a699-4beb-8eb2-c931ce0c1f60",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7feea282-1d71-4ea8-8bdd-0a9bb68af70d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "272f6d14-89ba-496f-b7ff-215263d3219f",
            "actions": [
                {
                    "name": "Navigate",
                    "type": "PassThrough",
                    "id": "c95b2375-e6d9-4b88-9c4c-c5e76515df4b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "7607c7b6-cd76-4816-beef-bd0341cfe950",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "15cef263-9014-4fd5-94d9-4e4a6234a6ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "32b35790-4ed0-4e9a-aa41-69ac6d629449",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "3c7022bf-7922-4f7c-a998-c437916075ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "44b200b1-1557-4083-816c-b22cbdf77ddf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "dad70c86-b58c-4b17-88ad-f5e53adf419e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "0489e84a-4833-4c40-bfae-cea84b696689",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseMenu",
                    "type": "Button",
                    "id": "d50f9989-16e8-4bfc-8e1b-a93195926914",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "ff527021-f211-4c02-933e-5976594c46ed",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "563fbfdd-0f09-408d-aa75-8642c4f08ef0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2bf42165-60bc-42ca-8072-8c13ab40239b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "74214943-c580-44e4-98eb-ad7eebe17902",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8607c725-d935-4808-84b1-8354e29bab63",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9e92bb26-7e3b-4ec4-b06b-3c8f8e498ddc",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad;Touch;Joystick;XR",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82627dcc-3b13-4ba9-841d-e4b746d6553e",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad;Touch;Joystick;XR",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c52c8e0b-8179-41d3-b8a1-d149033bbe86",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4faf7dc9-b979-4210-aa8c-e808e1ef89f5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38c99815-14ea-4617-8627-164d27641299",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c191405-5738-4d4b-a523-c6a301dbf754",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24066f69-da47-44f3-a07e-0015fb02eb2e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c79d4597-6ba2-441b-97ca-48d32f54e099",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "CloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}